# controls_challenge

./: .gitignore  README.md  pyproject.toml
controllers/: bc.py
offline/: config.py  physics.py  run.py  segment.py  stats.py  tune.py  tune_horizon.py
offline/bc/: dataset.py  evaluate.py  model.py  train.py
offline/pgto/: optimizer.py  rollout.py  step.py
slurm/: offline_full.sh  offline_train.sh  offline_tune.sh  offline_tune_horizon.sh  test_00000.sh
