[project]
name = "controls-challenge"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "onnx2torch>=1.5.15",
    "onnxruntime>=1.23.2",
    "optuna>=4.6.0",
    "optuna-dashboard>=0.20.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
